examples/test/testpolicy7447.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7447
  namespace: namespace159
spec:
  podSelector:
    matchLabels:
      key36: value38
      key3: value10
      key12: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value33
      podSelector:
        matchLabels:
          key41: value39
          key43: value20
